--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
             padding: 40px;
         }
 
+        @media (max-width: 768px) {
+            .container {
+                padding: 40px 20px;
+            }
+        }
+
         h1 {
             text-align: center;
             color: #667eea;
-            margin-bottom: 10px;
+            margin-bottom: 30px;
             font-size: 2.5em;
         }
 
-        .subtitle {
-            text-align: center;
-            color: #666;
-            margin-bottom: 30px;
-        }
-
         .section {
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
         .section-title {
@@ -60,24 +60,27 @@
             flex-wrap: wrap;
         }
 
-        .input-group input {
-            min-width: 150px;
+        @media (max-width: 768px) {
+            .input-group {
+                flex-direction: column;
+            }
         }
 
         .input-group button {
             flex-shrink: 0;
         }
 
-        input {
+        input, select {
             flex: 1;
             padding: 12px;
+            background: white;
             border: 2px solid #e0e0e0;
             border-radius: 8px;
             font-size: 16px;
             transition: border-color 0.3s;
         }
 
-        input:focus {
+        input:focus, select:focus {
             outline: none;
             border-color: #667eea;
         }
@@ -92,6 +95,7 @@
             cursor: pointer;
             transition: background 0.3s, transform 0.1s;
             font-weight: 600;
+            min-width: max-content;
         }
 
         button:hover {
@@ -112,11 +116,13 @@
         }
 
         button.danger {
-            background: #e74c3c;
+            background: transparent;
+            color: #e74c3c;
+            padding: 0;
         }
 
         button.danger:hover {
-            background: #c0392b;
+            color: #c0392b;
         }
 
         .participants-list {
@@ -129,8 +135,9 @@
             align-items: center;
             padding: 12px;
             background: #f8f9fa;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            margin-bottom: 8px;
+            margin-bottom: 15px;
         }
 
         .participant-info {
@@ -171,8 +178,9 @@
             padding: 12px;
             background: #fff3cd;
             border-radius: 8px;
-            margin-bottom: 8px;
+            margin-bottom: 15px;
             border-left: 4px solid #ffc107;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .exclusion-pair {
@@ -182,10 +190,14 @@
 
         .results {
             margin-top: 30px;
-            padding: 20px;
-            background: #f8f9fa;
-            border-radius: 12px;
             display: none;
+        }
+
+        @media (max-width: 768px) {
+            .results > div {
+                flex-direction: column;
+                align-items: normal !important;
+            }
         }
 
         .results.show {
@@ -194,9 +206,10 @@
 
         .pair-item {
             padding: 15px;
-            background: white;
+            background: #f8f9fa;
             border-radius: 8px;
-            margin-bottom: 10px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 15px;
             border-left: 4px solid #667eea;
             display: flex;
             justify-content: space-between;
@@ -210,7 +223,6 @@
         .pair-names {
             display: flex;
             align-items: center;
-            margin-bottom: 8px;
         }
 
         .pair-giver {
@@ -281,14 +293,13 @@
 <body>
     <div class="container">
         <h1>Gift Exchange Pairing Generator</h1>
-        <p class="subtitle">Create perfect pairings with exclusions</p>
 
         <div class="section">
             <h2 class="section-title">Add Participants</h2>
             <div class="input-group">
-                <input type="text" id="nameInput" placeholder="Name">
+                <input type="text" id="nameInput" placeholder="Name*">
                 <input type="tel" id="phoneInput" placeholder="(XXX) XXX-XXXX">
-                <input type="url" id="wishlistInput" placeholder="Wishlist URL (optional)">
+                <input type="url" id="wishlistInput" placeholder="Wishlist URL">
                 <button class="secondary" onclick="addParticipant()">Add</button>
             </div>
             <div id="participantsList" class="participants-list"><div class="empty-state">No participants added yet</div></div>
@@ -297,10 +308,10 @@
         <div class="section">
             <h2 class="section-title">Exclude Pairs</h2>
             <div class="input-group">
-                <select id="excludeGiver" style="flex: 1; padding: 12px; border: 2px solid #e0e0e0; border-radius: 8px; font-size: 16px;">
+                <select id="excludeGiver">
                     <option value="">Select giver...</option>
                 </select>
-                <select id="excludeReceiver" style="flex: 1; padding: 12px; border: 2px solid #e0e0e0; border-radius: 8px; font-size: 16px;">
+                <select id="excludeReceiver">
                     <option value="">Select receiver...</option>
                 </select>
                 <button class="secondary" onclick="addExclusion()">Exclude</button>
@@ -313,8 +324,8 @@
         <div id="errorMessage"></div>
 
         <div id="results" class="results">
-            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-                <h2 class="section-title" style="margin-bottom: 0;">Generated Pairings</h2>
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; gap: 20px;">
+                <h2 class="section-title" style="margin-bottom: 0; width: 100%;">Generated Pairings</h2>
                 <button class="secondary" onclick="exportPairingsToCSV()" id="exportBtn" style="display: none;">Export to CSV</button>
             </div>
             <div id="pairingsList"></div>
@@ -565,7 +576,7 @@
                             <span class="pair-separator"></span>
                             <span class="pair-receiver">${pair.receiver.name}</span>
                         </div>
-                        <div class="pair-phone">Phone: ${pair.receiver.phone}</div>
+                        ${pair.receiver.phone && pair.receiver.phone !== 'N/A' ? `<div class="pair-phone">Phone: ${pair.receiver.phone}</div>` : ''}
                         ${pair.receiver.wishlist ? `<div class="pair-wishlist">Wishlist: <a href="${pair.receiver.wishlist}" target="_blank" rel="noopener noreferrer">${pair.receiver.wishlist}</a></div>` : ''}
                     </div>
                 </div>
